[package]
name = "rustick"
version = "0.1.0"
authors = ["Henrik zu Jeddeloh <henrik.zujeddeloh@protonmail.com>"]
description = "A CLI timer/time tracker"
readme = "README.md"
license = "MIT"
repository = "https://github.com/henrikzujeddeloh/rustick"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
terminal_size = { version = "0.3.0"}
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
